--- a/second.html
+++ b/second.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my second(other) file in second branch</h1>
+    <h1>This is my second(changing this) file in second branch</h1>
 </body>
 </html>
